--- a/inicio/static/inicio/css/style.css
+++ b/inicio/static/inicio/css/style.css
@@ -82,6 +82,17 @@
     text-align: center;
     background: #ddd;
   }
+
+ table{
+    border-collapse: collapse;
+  } 
+  
+  td,tr{
+    border: 1px solid #999;
+    padding: 0.5rem;
+    text-align: left;
+    border-radius: 50px;
+  }
   
   /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
   @media screen and (max-width: 700px) {
