--- a/inicio/static/inicio/css/style.css
+++ b/inicio/static/inicio/css/style.css
@@ -16,10 +16,10 @@
   }
   
   /* Increase the font size of the h1 element */
-  .header h1 {
+  .heder h1 {
     font-size: 40px;
   }
-  
+
   /* Style the top navigation bar */
   .navbar {
     overflow: hidden;
@@ -67,6 +67,7 @@
     flex: 70%;
     background-color: white;
     padding: 20px;
+
   }
   
   /* Fake image, just for this example */
@@ -83,15 +84,39 @@
     background: #ddd;
   }
 
- table{
+  .container{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+
+  th {
+    border: 1px solid black;
     border-collapse: collapse;
-  } 
+    text-align: center;
+    border: 1px solid #999;
+    padding: 0.5rem;
+    background: #333;
+    color: white;
+    border-radius: 10px;
+  }
   
   td,tr{
     border: 1px solid #999;
     padding: 0.5rem;
+    text-align: center;
+    border-radius: 10px;
+  }
+
+  input{
+    border: 1px solid black;
+    border-collapse: collapse;
     text-align: left;
-    border-radius: 50px;
+    border: 1px solid #999;
+    padding: 0.5rem;
+    background: rgb(252, 252, 252);
+    color: rgb(0, 0, 0);
+    border-radius: 5px;
   }
   
   /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
