--- a/inicio/templates/inicio/index.html
+++ b/inicio/templates/inicio/index.html
@@ -27,22 +27,22 @@
 
 <div class="row">
   <div class="side">
-    <h2>About Me</h2>
-    <h5>Photo of me:</h5>
-    <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+    <h2>Em construção</h2>
+    <h5>Em construção</h5>
+    <!-- <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
     <h3>More Text</h3>
-    <p>Lorem ipsum dolor sit ame.</p>
+    <p>Lorem ipsum dolor sit ame.</p> -->
   </div>
   <div class="main">
-    <h2>TITLE HEADING</h2>
-    <h5>Title description, Dec 7, 2017</h5>
-    <p>Some text..</p>
+    <h2>Em construção</h2>
+    <h5>Em construção</h5>
+    <!-- <p>Some text..</p>
     <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
     <br>
     <h2>TITLE HEADING</h2>
     <h5>Title description, Sep 2, 2017</h5>
     <p>Some text..</p>
-    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p> -->
   </div>
 </div>
 
